test/files/neg/macro-keyword-trait1.check
macro-keyword-trait1.scala:3: error: identifier expected but 'macro' found.
trait macro
      ^
one error found
